<resources>
    <string name="app_name">Sors-moi!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="soiree">Soirées</string>
    <string name="bars">Bars</string>
    <string name="resto">KitKat</string>
    <string name="concerts">Concerts</string>
    <string name="action_settings">Paramètres</string>
    <string name="title_activity_parties_">Sors-moi!</string>
    <string name="mentionslegales">L\'application est éditée par la crème de la crème (pas anglaise), SARL (société à responsabilité limitée) au capital social de 4.000.000.000.000 euros (RCS Nanterre B 753 000 027), domiciliée au 1 rue du Kit Kat 92100 Boulogne-Billancourt. Numéro SIRET : 69696969696.

Directeur de publication et webmaster : Jean-Louis KitKat. Nous contacter à cette adresse : kitkatBGdu34@gmail.com</string>
    <string name="contactinfo">Insérer ici les infos de contact...</string>
    <string name="equipedev">Benjamin Berthet, Guillaume Cornu, Loïc Dangla et Romain Darcel.</string>
    <string name="adressemailDarcel">romain.darcel@epsi.fr</string>
    <string name="adressemailDangla">loic.dangla@epsi.fr</string>
    <string name="adressemailCornu">guillaume.cornu@epsi.fr</string>
    <string name="adressemailBerthet">benjamin.berthet@epsi.fr</string>
    <string name="titleInscription">Inscription</string>
    <string name="NomUtilisateur">Nom</string>
    <string name="PrenomUtilisateur">Prénom</string>
    <string name="MailUtilisateur">Mail</string>
    <string name="VilleUtilisateur">Ville</string>
    <string name="codePostalUtilisateur">Code Postal</string>
    <string name="MotDePasseUtilisateur">Mot de passe</string>
    <string name="titleModification">Modification</string>
    <string name="tilisateur">ID</string>
    <string name="modifier">Modifier</string>
    <string name="recup">Récupérer</string>
</resources>
