<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.darcel.sors_moi.MainActivity"
    android:background="@drawable/side_nav_bar">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/inscriptionTitleActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/titleModification"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"
            android:paddingBottom="15dp"
            android:textAlignment="center"/>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="top"
            android:layout_gravity="top"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:paddingBottom="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/tilisateur"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/idInscri2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/tilisateur"/>
            <Button
                android:gravity="top"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:id="@+id/getuser"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/recup"
                android:drawableLeft="@drawable/ic_menu_share"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="top"
            android:layout_gravity="top"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:paddingBottom="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/NomUtilisateur"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/nomInscri2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/NomUtilisateur"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="top"
            android:layout_gravity="top"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:paddingBottom="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/PrenomUtilisateur"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/prenomInscri2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/PrenomUtilisateur"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="top"
            android:layout_gravity="top"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:paddingBottom="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/MailUtilisateur"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/mailInscri2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/MailUtilisateur"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="top"
            android:layout_gravity="top"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:paddingBottom="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/VilleUtilisateur"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/villeInscri2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/VilleUtilisateur"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="top"
            android:layout_gravity="top"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:paddingBottom="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/codePostalUtilisateur"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/codePostalInscri2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/codePostalUtilisateur"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="top"
            android:layout_gravity="top"
            android:layout_height="60dp"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/MotDePasseUtilisateur"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"/>
            <EditText
                android:id="@+id/motDePasseInscri2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:inputType="textWebPassword" />
        </LinearLayout>
        <Button
            android:gravity="top"
            android:layout_gravity="center"
            android:id="@+id/confirmInscription"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/modifier"
            android:drawableLeft="@drawable/ic_menu_send"
            />
        <TextView
            android:id="@+id/validationInscri2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"
            android:paddingBottom="15dp"
            android:textAlignment="center"/>

    </GridLayout>

</RelativeLayout>